HRMW-745- Code improvements - Search functionality