@@ -1,15 +1,5 @@
 package com.technofacts.lnf.company.service;
 
-import java.lang.reflect.Field;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
-import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
 import com.google.common.collect.Lists;
 import com.technofacts.lnf.company.converter.CompanyConverter;
 import com.technofacts.lnf.company.exception.LnFBadRequestException;
@@ -17,10 +7,10 @@ import com.technofacts.lnf.company.exception.LnFEntityNotFoundException;
 import com.technofacts.lnf.company.exception.LnFException;
 import com.technofacts.lnf.company.model.Company;
 import com.technofacts.lnf.company.repository.CompanyRepository;
-import com.technofacts.lnf.company.repository.specification.company.CompanySpecificationBuilder;
-import com.technofacts.lnf.company.util.RestUtil;
 import com.technofacts.lnf.dto.company.CompanyDto;
-import com.technofacts.lnf.dto.recruiter.ApplicantDto;
+import com.technofacts.lnf.service.specification.GenericSpecificationBuilder;
+import com.technofacts.lnf.util.RestUtil;
+import com.technofacts.lnf.util.specification.SpecificationUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.java.Log;
 import org.springframework.data.domain.Page;
@@ -30,13 +20,16 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
+import java.util.Objects;
+import java.util.UUID;
+import java.util.function.Function;
+
 @Service
 @Transactional
 @RequiredArgsConstructor
 @Log
 public class CompanyService {
-
-    private static final String SEARCH_REGEX_PATTERN = "([\\w]+)\\s*:\\s*([\\w.@\\- ]+?)(?=(,|$))";
 
     private final CompanyRepository repository;
 
@@ -54,12 +47,12 @@ public class CompanyService {
     public List<CompanyDto> findAllSorted(String sortBy, String sortOrder) {
         final Sort sortInfo = RestUtil.constructSort(sortBy, sortOrder);
         List<Company> entities = Lists.newArrayList(repository.findAll(sortInfo));
-        return entities.stream().map(CompanyConverter::toTransportModel).filter(Objects::nonNull).collect(Collectors.toList());
+        return entities.stream().map(CompanyConverter::toTransportModel).filter(Objects::nonNull).toList();
     }
 
     public List<CompanyDto> findAll() {
         List<Company> entities = repository.findAll();
-        return entities.stream().map(CompanyConverter::toTransportModel).filter(Objects::nonNull).collect(Collectors.toList());
+        return entities.stream().map(CompanyConverter::toTransportModel).filter(Objects::nonNull).toList();
     }
 
     public List<CompanyDto> findAll(String search) {
@@ -74,62 +67,13 @@ public class CompanyService {
                 .toList();
     }
     private Specification<Company> buildCompanySpecification(String search) {
-        final CompanySpecificationBuilder builder = new CompanySpecificationBuilder();
-        createSearchConditions(search, builder);
-        return builder.build();
+        GenericSpecificationBuilder<Company> companySpecBuilder = new GenericSpecificationBuilder<>();
+        Function<String, Class<?>> fieldClassForCompany = this::getFieldClassFromCompany;
+        return SpecificationUtil.buildSpecification(search, companySpecBuilder, fieldClassForCompany);
     }
 
-    private void createSearchConditions(String search, CompanySpecificationBuilder builder) {
-        log.info(() -> String.format("search [%s]", search));
-        log.info(() -> String.format("builder [%s]", builder.toString()));
-        final Matcher matcher = Pattern.compile(SEARCH_REGEX_PATTERN, Pattern.CASE_INSENSITIVE).matcher(search);
-        while (matcher.find()) {
-            processSearchGroup(matcher, builder);
-        }
-    }
-
-    private void processSearchGroup(final Matcher matcher, final CompanySpecificationBuilder builder) {
-        String key = matcher.group(1).trim();
-        String value = matcher.group(2).trim();
-        log.info("Key: " + key + ", Value: " + value);
-        Class<?> fieldType = getFieldClass(key);
-        addCondition(builder, key, fieldType, value);
-    }
-
-    private void addCondition(final CompanySpecificationBuilder builder, final String key, Class<?> fieldType, final String value) {
-        if (fieldType != null) {
-            Object convertedValue = convertToFieldType(fieldType, value);
-            builder.with(key, ":", convertedValue);
-        }
-    }
-    private Class<?> getFieldClass(String fieldName) {
-        try {
-            Class<?> clazz = Class.forName("com.technofacts.lnf.company.model.Company");
-            Field field = clazz.getDeclaredField(fieldName);
-            return field.getType();
-        } catch (ClassNotFoundException | NoSuchFieldException e) {
-            return null;
-        }
-    }
-
-    private Object convertToFieldType(Class<?> fieldType, String value) {
-        if (fieldType.isEnum()) {
-            return getEnumConstant(fieldType, value);
-        } else if (fieldType == Integer.class || fieldType == int.class) {
-            return Integer.valueOf(value);
-        } else {
-            return value;
-        }
-    }
-
-    private Enum<?> getEnumConstant(Class<?> fieldType, String value) {
-        String uppercaseValue = value.toUpperCase();
-        for (Enum<?> enumConstant : ((Class<? extends Enum>) fieldType).getEnumConstants()) {
-            if (enumConstant.name().toUpperCase().equals(uppercaseValue)) {
-                return enumConstant;
-            }
-        }
-        return null;
+    private Class<?> getFieldClassFromCompany(String fieldName) {
+        return SpecificationUtil.getFieldClass(Company.class, fieldName);
     }
 
     public CompanyDto findByCompanyCode(String companyCode) {
@@ -175,12 +119,12 @@ public class CompanyService {
         List<Company> entities = Lists.newArrayList(resultPage.getContent());
         return entities.stream().map(CompanyConverter::toTransportModel)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private Company saveEntity(Company entity) {
+    private void saveEntity(Company entity) {
         try {
-            return repository.save(entity);
+            repository.save(entity);
         } catch (RuntimeException e) {
             String errorMessage = String.format("Failed to save company [%s]", entity.getCode());
             throw new LnFException(errorMessage, e);
@@ -188,13 +132,15 @@ public class CompanyService {
     }
 
     private Company search(UUID companyId) {
-        return repository.findById(companyId).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Company with id [%s] does not exist", companyId)));
+        return repository.findById(companyId).orElseThrow(() -> entityNotFoundException(companyId));
     }
 
     private Company search(String companyCode) {
-        return repository.findByCompanyCode(companyCode).
-                orElseThrow(() -> new LnFEntityNotFoundException(String.format("Company with code [%s] does not exist", companyCode)));
+        return repository.findByCompanyCode(companyCode).orElseThrow(() -> entityNotFoundException(companyCode));
+    }
+
+    private LnFEntityNotFoundException entityNotFoundException(Object companyIdentifier) {
+        return new LnFEntityNotFoundException(String.format("Company with id/code [%s] does not exist", companyIdentifier));
     }
 }
 
